--- a/pnl/BackEndSoftArena.dproj
+++ b/pnl/BackEndSoftArena.dproj
@@ -179,6 +179,11 @@
             <FormType>dfm</FormType>
             <DesignClass>TUniFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="unListaPadrao.pas">
+            <Form>frmListaPadrao</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TUniFrame</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
